save before inst material

--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -18,7 +18,7 @@
           <p class="card-subtitle text-muted mt-1 mb-1">{{activity.name}}</p>        
           <div *ngFor="let role of activity.role" class="col">     
             <input 
-              class="btn-check w-100" 
+              class="btn-check" 
               type="radio" 
               value="{{role.value}}"
               name="{{role.name}}" 
