--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -1,7 +1,7 @@
 <form #surveyForm="ngForm" class="container form-group bg-white" (ngSubmit)="sendSurvey(surveyForm)">
   <div class="header text-center">
-    <h1>Aktywności ({{dayOfActivity}})</h1>
-    <p>W ALT informacje o alcie/altach - dps/sup, aktywności. Godziny pozostaną takie jak main</p>
+    <h1>Aktywności ({{generateCurrentWeek(userActivity.week.start)}} - {{generateCurrentWeek(userActivity.week.end)}})</h1>
+    <p>{{userActivity.information}}</p>
   </div>
   <div class="card shadow-sm container">
     <div class="nick p-3 mb-2">
@@ -13,38 +13,47 @@
         id="nick" 
         ngModel
         required> 
-      <div class="card shadow-sm mb-4" *ngFor="let activity of weeklyActivity">      
-        <div class="row p-2">
+      <div class="btn-group d-flex" >
+        <div class="col  ps-2 pe-2 pb-3"  *ngFor="let role of userActivity.roles">
+          <input class="btn-check" type="radio" name="role" id="{{role}}" value="{{role}}" required ngModel>
+          <label class="btn btn-outline-primary w-100" for="{{role}}"> {{role | uppercase}} </label>
+        </div>       
+      </div>
+      <div class="card shadow-sm mb-4" *ngFor="let activity of userActivity.raids">      
+        <div class="row p-2 btn-group d-flex">
           <p class="card-subtitle text-muted mt-1 mb-1">{{activity.name}}</p>        
-          <div *ngFor="let role of activity.role" class="col">     
+          <div *ngFor="let role of activity.difficults" class="col">     
             <input 
               class="btn-check" 
               type="radio" 
-              value="{{role.value}}"
-              name="{{role.name}}" 
-              id="{{role.id}}"
+              name="{{activity.name}}" 
+              id="{{activity.name}}_{{role}}"
+              value="{{role}}"
               ngModel
               required     
             >
             <label           
               class="btn btn-outline-primary w-100" 
-              for="{{role.id}}">{{role.value | uppercase}}
+              for="{{activity.name}}_{{role}}">{{role | uppercase}}
             </label>   
           </div>    
         </div>  
       </div> 
-      <div class="card shadow-sm mb-4">
+      <div class="card shadow-sm mb-4" *ngIf="userActivity.days.length > 0">
         <table class="table table-light table-striped mb-0">
           <thead>
             <tr>
               <th>Dni\godziny</th>
-              <th *ngFor="let hour of hours">{{hour}}</th>
+              <th *ngFor="let hour of userActivity.hours">{{hour}}</th>
             </tr>
           </thead>
           <tbody *ngFor="let day of weeklyCalendar">
             <tr>
               <th>{{getDayName(day)}}</th>
-              <td *ngFor="let check of day"><input style="cursor: pointer;" type="checkbox" name="{{check}}" id="{{check}}" ngModel></td>                
+              <td *ngFor="let check of day">
+                <input style="cursor: pointer;" 
+                  type="checkbox" name="{{check}}" id="{{check}}" ngModel>
+              </td>                
             </tr>
           </tbody>
         </table>
