--- a/src/app/components/raids-view/raids-view.component.html
+++ b/src/app/components/raids-view/raids-view.component.html
@@ -1,20 +1,61 @@
 <div class="accordion container bg-white" id="raids"> 
-  <div class="accordion-item" *ngFor="let raid of weeklyActivity | filter ; let i = index ">
-    <h2 class="accordion-header" [id]="'panelsStayOpen-heading'+ i">
-      <button class="accordion-button" 
+  <div class="accordion-item" *ngFor="let raid of listOfPlayers; let i = index ">
+    <div class="accordion-header d-flex flex-nowrap" [id]="'panelsStayOpen-heading'+ i">
+      <button class="accordion-button flex-grow" 
         type="button" 
         data-bs-toggle="collapse" 
         [attr.data-bs-target]="'#panelsStayOpen-collapse' + i" 
         aria-expanded="true" 
-        [attr.aria-controls]="'panelsStayOpen-collapse'+i">{{raid.name}}
+        [attr.aria-controls]="'panelsStayOpen-collapse'+i">{{raid.raidName}} {{raid.raidDiff}}
       </button>
-    </h2>
+      <button class="btn btn-success" (click)="addNewRaid(i)">Add new raid</button>
+    </div>
     <div [id]="'panelsStayOpen-collapse'+ i" 
       class="accordion-collapse collapse show" 
       [attr.aria-labelledby]="'panelsStayOpen-heading'+i">
-      <div class="accordion-body">
-        
+      <div class="accordion-body card-group" cdkDropListGroup>
+        <div class="card" 
+          *ngFor="let lob of raid.lobby; let j = index">
+          <div class="card-header" >
+            <h1 class="card-title">{{lob.placeNumber === 0 ? lob.placeName : lob.placeName +' ' + lob.placeNumber}} 
+              <button (click)="removeRaid(i, j)" *ngIf="j > 0" class="btn btn-danger btn-sm float-end">X</button>
+            </h1> 
+            <input *ngIf="j > 0" value="{{lob.raidTime}}" class="form-control" placeholder="Set a time info etc."> 
+            <div *ngIf="j < 1">
+              <h3 class="card-subtitle text-muted">Search:</h3>
+              <div class="btn-group d-flex flex-wrap mb-1" role="group" >
+                <div *ngFor="let day of usersActivity.days" >
+                  <input type="checkbox" class="btn-check" name="day" id="day{{day}}" (click)="searchInDays(day, i)">
+                  <label class="btn btn-outline-primary btn-sm" for="day{{day}}">{{day}}</label>
+                </div>
+              </div>
+              <div class="btn-group d-flex flex-wrap" role="group">
+                <div *ngFor="let hour of usersActivity.hours">
+                  <input type="checkbox" class="btn-check" name="hour" id="hour{{hour}}" (click)="searchInHours(hour, i)">
+                  <label class="btn btn-outline-primary btn-sm" for="hour{{hour}}">{{hour}}</label>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div cdkDropList *ngIf="!startFilter"
+            id="{{lob.placeName}}{{lob.placeNumber}}"
+            [cdkDropListData]="lob.players"
+            (cdkDropListDropped)="drop($event)"      
+            class="list-group list-group-flush">
+            <div 
+              *ngFor="let player of lob.players"  
+              cdkDrag
+              [cdkDragData]="player"
+              class="list-group-item"
+              
+            >
+              <p>{{player.player}} <span class="badge rounded-pill bg-primary float-end">{{player.role}}</span></p>
+            </div>
+          </div>
+          
+        </div>
       </div>
     </div>
   </div>
+
 </div>
