--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,3 +5,8 @@ body{
   background-size: cover;
   background-position: top center;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+/* Importing Bootstrap SCSS file. */
+@import '~bootstrap/scss/bootstrap';
