--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -1,6 +1,6 @@
-<form [formGroup]="userActivity" class="container form-group bg-white" (ngSubmit)="sendSurvey()">
+<form [formGroup]="userActivity" class="container form-group bg-white" (ngSubmit)="formService.sendSurvey(userActivity)" *ngIf="raidActivity">
   <div class="header text-center">
-    <h1>Aktywności ({{generateCurrentWeek(raidActivity.week.start)}} - {{generateCurrentWeek(raidActivity.week.end)}})</h1>
+    <h1>Activity ({{generateCurrentWeek(raidActivity.week.start)}} - {{generateCurrentWeek(raidActivity.week.end)}})</h1>
     <p>{{raidActivity.information}}</p>
   </div>
   <div class="card shadow-sm container">
@@ -43,7 +43,7 @@
         <table class="table table-light table-striped mb-0" >
           <thead>
             <tr>
-              <th>Dni\godziny</th>
+              <th>Days/Hours</th>
               <th *ngFor="let hour of raidActivity.hours">{{hour}}</th>
             </tr>
           </thead>
@@ -62,6 +62,6 @@
     </div>
   </div>
   <div class="d-grid col-6 mx-auto ">
-    <button class="btn btn-primary mt-3 mb-3" type="submit" [disabled]="!userActivity.valid">Wyślij formularz</button>
+    <button class="btn btn-primary mt-3 mb-3" type="submit" [disabled]="!userActivity.valid">Send form</button>
   </div>
 </form>
